--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build http://red-queens-race-by-aamirali.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build http://red-queen-race-by-aamirali.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
