--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,4 @@ jobs:
       run: npm install -g surge
     
     - name: deploying on surge
-      run: surge ./build red-queen-project4-by-aamirali.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./build http://red-queen-project4-by-aamirali.surge.sh/ --token ${{secrets.SURGE_TOKEN}}
